# swiftlens

./: .gitignore  =0.1.0  COMMERCIAL.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  format.sh  pyproject.toml  requirements.txt  run_swift_context.sh  setup.py  upload_testpypi.sh
.github/: CODEOWNERS
.github/workflows/: publish-main-to-pypi.yml  test.yml
src/: __init__.py  _version.py  server.py
src/analysis/: file_analyzer.py  symbol_analyzer.py
src/client/: connection_state.py  dashboard_proxy.py  launcher.py
src/config/: constants.py
src/dashboard/: __init__.py  config.py  logger.py  web_server.py
src/dashboard/static/: dashboard.css  dashboard.js  index.html
src/model/: __init__.py  models.py
src/tools/: __init__.py  get_tool_help.py  swift_analyze_file.py  swift_analyze_multiple_files.py  swift_check_environment.py  swift_find_symbol_references.py  swift_format_context.py  swift_get_declaration_context.py  swift_get_file_imports.py  swift_get_hover_info.py  swift_get_symbol_definition.py  swift_get_symbols_overview.py  swift_replace_symbol_body.py  swift_search_pattern.py  swift_summarize_file.py  swift_validate_file.py
src/utils/: validation.py
swiftlens/: COMMERCIAL.md  CONTRIBUTING.md  _version.py  server.py
swiftlens/analysis/: __init__.py  file_analyzer.py  result_builders.py  symbol_analyzer.py
swiftlens/client/: __init__.py  mcp_client.py
swiftlens/compiler/: __init__.py  error_parser.py  swift_compiler_client.py
swiftlens/dashboard/: resource_manager.py  web_server.py
swiftlens/model/: models.py
swiftlens/tools/: get_tool_help.py  swift_analyze_file.py  swift_analyze_files.py  swift_analyze_multiple_files.py  swift_build_index.py  swift_check_environment.py  swift_find_symbol_references.py  swift_find_symbol_references_files.py  swift_format_context.py  swift_get_declaration_context.py  swift_get_file_imports.py  swift_get_hover_info.py  swift_get_symbol_definition.py  swift_get_symbols_overview.py  swift_lsp_diagnostics.py  swift_replace_symbol_body.py  swift_search_pattern.py  swift_summarize_file.py  swift_validate_file.py
swiftlens/utils/: __init__.py  environment.py  file_operations.py  text_based_symbol_finder.py  thread_local_lsp.py
test/: conftest.py
test/client/: __init__.py  test_connection_state.py  test_dashboard_proxy.py  test_launcher.py  test_mcp_client.py
test/tools/: lsp_test_utils.py  run_all_tests.py  test_complex_features.py  test_concurrent_definitions.py  test_cross_file_definitions.py  test_helpers.py  test_integration_parallel.py  test_malformed_swift.py  test_multiple_definitions.py  test_performance_definitions.py  test_swift_analyze_file.py  test_swift_analyze_files.py  test_swift_analyze_multiple_files.py  test_swift_build_index.py  test_swift_check_environment.py  test_swift_find_symbol_references.py  test_swift_find_symbol_references_files.py  test_swift_format_context.py  test_swift_get_declaration_context.py  test_swift_get_file_imports.py  test_swift_get_hover_info.py  test_swift_get_symbol_definition.py  test_swift_get_symbols_overview.py  test_swift_lsp_diagnostics.py  test_swift_replace_symbol_body.py  test_swift_search_pattern.py  test_swift_summarize_file.py  test_swift_validate_file.py  test_test_helpers.py  test_thread_safety.py  test_unicode_symbols.py
test/utils/: test_file_operations.py
